feat: implements patrimonial management
